--- a/package.json
+++ b/package.json
@@ -4,20 +4,9 @@
   "description": "",
   "main": "handler.js",
   "dependencies": {
-    "aws-sdk": "^2.843.0",
     "aws-serverless-express": "^3.4.0",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^9.0.2",
-    "express": "^4.17.1",
-    "helmet": "^4.6.0",
-    "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.7",
     "serverless-dotenv-plugin": "^3.9.0",
-    "uuid": "^8.3.2"
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
     "standard": "^16.0.3"
@@ -26,7 +15,8 @@
     "lint": "standard --fix",
     "dynamodb:create": "node ./src/db/migrations/create-table.js",
     "dynamodb:delete": "node ./src/db/migrations/delete-table.js",
-    "start": "nodemon ./src/server.js"
+    "offline": "export NODE_PATH=\"${PWD}/layer/nodejs/node_modules\" && serverless offline",
+    "start": "export NODE_PATH=\"${PWD}/layer/nodejs/node_modules\" && nodemon ./src/server.js"
   },
   "keywords": [],
   "author": "",
